tests/errors/sem1.kt
fun main() {
    var x: Int;
    var x: Int; // redeclaration
}